compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_type_does_not_allow_unit_utf16.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 149
expression: "let x = <<1:utf16-unit(5)>> x"
---
error: Invalid bit string segment
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = <<1:utf16-unit(5)>> x
  │             ^^^^^ Unit cannot be specified here

Hint: utf16 segments are sized based on their value and cannot have a unit.
See: https://gleam.run/book/tour/bit-arrays.html

