compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_segment_type_does_not_allow_unit_utf32.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 154
expression: "case <<1>> { <<1:utf32-unit(2)>> -> a }"
---
error: Invalid bit string segment
  ┌─ /src/one/two.gleam:1:18
  │
1 │ case <<1>> { <<1:utf32-unit(2)>> -> a }
  │                  ^^^^^ Unit cannot be specified here

Hint: utf32 segments are sized based on their value and cannot have a unit.
See: https://gleam.run/book/tour/bit-arrays.html

